--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,10 @@
 sshuttle_user: sshuttle
 sshuttle_group: sshuttle
 sshuttle_package: sshuttle
+sshuttle_hosts:
+  remote_server1:
+    - 10.0.0.0/24
+    - 172.16.0.0/24
+    - 192.168.0.0.0/24
+sshuttle_args: "--no-latency-control"
+ssh_cmd_args: "ssh -o ServerAliveInterval=60"
