updated role name in galaxy meta

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  role_name: sshutle
+  role_name: sshuttle
   author: Jared Zieche
   description: Install sshuttle as a service
   license: MIT
