--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   min_ansible_version: 2.9
   platforms:
    - name: ubuntu
-     versions: [ 'Uma' ]
+     versions: [ 'Uma', 'Ulyssa' ]
    - name: redhat
      versions: [ '7', '8' ]
   galaxy_tags: ['sshuttle', 'tool']
