--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,9 +5,9 @@ galaxy_info:
   license: MIT
   min_ansible_version: 2.9
   platforms:
-   - name: ubuntu
+   - name: Ubuntu
      versions: [ 'Uma', 'Ulyssa' ]
-   - name: redhat
+   - name: RedHat
      versions: [ '7', '8' ]
   galaxy_tags: ['sshuttle', 'tool']
 dependencies: []
