updated molecule config and added ternary value to shuttle.py

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,7 +5,7 @@ driver:
   name: docker
 platforms:
   - name: sshuttle
-    image: docker.io/pycontribs/centos:8
+    image: centos-va:latest #docker.io/pycontribs/centos:8
     pre_build_image: true
 provisioner:
   name: ansible
