--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,7 +56,7 @@
 - name: "create sshuttle {{ ansible_service_mgr }} file"
   template:
     src: "{{ ansible_service_mgr }}.service.j2"
-    dest: "{{ '/etc/systemd/system/' if ansible_service_mgr == 'systemd' else '/etc/init.d/' }}"
+    dest: "{{ '/etc/systemd/system/sshuttle.service' if ansible_service_mgr == 'systemd' else '/etc/init.d/sshuttle' }}"
     owner: root
     group: root
     mode: 0440
