--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,8 @@ name: Molecule Test
   pull_request:
   push:
     branches:
-      - master
+      - main
+      - development
 jobs:
   test:
     name: Molecule
