--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,10 +3,18 @@ dependency:
   name: galaxy
 driver:
   name: docker
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
 platforms:
   - name: sshuttle
     image: geerlingguy/docker-centos8-ansible:latest
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
     pre_build_image: true
+    privileged: true
 provisioner:
   name: ansible
 verifier:
