--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,7 +10,7 @@ lint: |
 platforms:
   - name: sshuttle
     image: geerlingguy/docker-centos8-ansible:latest
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    command: ""
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     pre_build_image: true
