--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install molecule[docker] docker-py docker requests yamllint ansible-lint
       - name: Test with molecule
-        run: molecule test
+        run: molecule --debug test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
