--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install molecule[docker] docker-py docker requests yamllint ansible-lint
+          python3 -m pip install ansible molecule[docker] docker requests yamllint ansible-lint
       - name: Test with molecule
         run: molecule --debug test
         env:
